--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 #System Properties
 cr=${line.separator}
 version=5.0-SNAPSHOT
-project.revision=${version}
+project.revision=5.0.3
 impl.vendor=Pentaho Corporation
 impl.version=${version}
 impl.title=Pentaho Data Integration
@@ -94,14 +94,14 @@ lib.dir=lib
 ivyfile=ivy.xml
 
 # Dependency revisions
-dependency.kettle.revision=5.0-SNAPSHOT
-dependency.pentaho-metadata.revision=5.0-SNAPSHOT
-dependency.mondrian.revision=3.6-SNAPSHOT
-dependency.pentaho-connections.revision=5.0-SNAPSHOT
-dependency.pentaho-reporting.revision=5.0-SNAPSHOT
+dependency.kettle.revision=5.0.3
+dependency.pentaho-metadata.revision=5.0.3
+dependency.mondrian.revision=3.6.3
+dependency.pentaho-connections.revision=5.0.3
+dependency.pentaho-reporting.revision=5.0.3
 dependency.reporting-engine.group=pentaho-reporting-engine
-dependency.pentaho-xul.revision=5.0-SNAPSHOT
-dependency.pentaho-vfs-browser.revision=5.0-SNAPSHOT
-dependency.pentaho-reporting-core.revision=5.0-SNAPSHOT
-dependency.pdi-palo-plugin.revision=5.0-SNAPSHOT
-dependency.launcher.revision=5.0-SNAPSHOT
+dependency.pentaho-xul.revision=5.0.3
+dependency.pentaho-vfs-browser.revision=5.0.3
+dependency.pentaho-reporting-core.revision=5.0.3
+dependency.pdi-palo-plugin.revision=5.0.3
+dependency.launcher.revision=5.0.3
